# llvm-project

.ci/apple-llvm/: swiftlang-clang-stage1-RA.groovy
.github/: CODEOWNERS
apple-ci/: pr.sh
clang-tools-extra/clangd/: ClangdLSPServer.cpp  ClangdServer.cpp  ClangdServer.h  CodeComplete.cpp  Protocol.cpp  Protocol.h
clang-tools-extra/docs/: ReleaseNotes.rst
clang/docs/: BoundsSafety.rst  ReleaseNotes.rst
clang/include/: module.modulemap
clang/include/clang-c/: Index.h
clang/lib/APINotes/: APINotesManager.cpp
clang/lib/AST/: APValue.cpp  ASTContext.cpp  ASTImporter.cpp  ASTStructuralEquivalence.cpp  AttrImpl.cpp  Decl.cpp  DeclPrinter.cpp  Expr.cpp  ExprClassification.cpp  ExprConstant.cpp  ItaniumMangle.cpp  MicrosoftMangle.cpp  RecordLayoutBuilder.cpp  StmtProfile.cpp  TextNodeDumper.cpp  Type.cpp  TypeLoc.cpp  TypePrinter.cpp  TypedMemoryInference.cpp
clang/lib/Analysis/: CFG.cpp
clang/lib/Basic/: DiagnosticIDs.cpp  FileManager.cpp  IdentifierTable.cpp  LangOptions.cpp  Module.cpp  TargetInfo.cpp
clang/lib/CodeGen/: BackendConsumer.h  BackendUtil.cpp  CGCall.cpp  CGCall.h  CGDebugInfo.cpp  CGDebugInfo.h  CGDecl.cpp  CGExpr.cpp  CGExprAgg.cpp  CGExprCXX.cpp  CGExprConstant.cpp  CGExprScalar.cpp  CGHLSLRuntime.cpp  CGStmt.cpp  CGTypedMemory.cpp  CMakeLists.txt  CodeGenAction.cpp  CodeGenFunction.cpp  CodeGenFunction.h  CodeGenModule.cpp  CodeGenModule.h  CodeGenTypes.cpp  CoverageMappingGen.cpp  ItaniumCXXABI.cpp  MicrosoftCXXABI.cpp
clang/lib/DependencyScanning/: CMakeLists.txt  DependencyScannerImpl.cpp  DependencyScanningFilesystem.cpp  DependencyScanningService.cpp  DependencyScanningWorker.cpp  IncludeTreeActionController.cpp  ModuleDepCollector.cpp
clang/lib/Driver/: Driver.cpp  SanitizerArgs.cpp  ToolChain.cpp  Types.cpp
clang/lib/Frontend/: ASTUnit.cpp  CompileJobCache.cpp  CompilerInstance.cpp  CompilerInvocation.cpp  FrontendAction.cpp  FrontendActions.cpp  PrintPreprocessedOutput.cpp
clang/lib/Headers/: CMakeLists.txt  module.modulemap
clang/lib/Index/: IndexingContext.cpp
clang/lib/Lex/: Lexer.cpp  ModuleMap.cpp  PPDirectives.cpp  PPLexerChange.cpp  PPMacroExpansion.cpp  Pragma.cpp  Preprocessor.cpp
clang/lib/Parse/: ParseCXXInlineMethods.cpp  ParseDecl.cpp  ParseDeclCXX.cpp  ParseExpr.cpp  ParseExprCXX.cpp  Parser.cpp
clang/lib/Sema/: AnalysisBasedWarnings.cpp  DynamicCountPointerAssignmentAnalysis.cpp  DynamicCountPointerAssignmentAnalysis.h  Sema.cpp  SemaAPINotes.cpp  SemaARM.cpp  SemaBoundsSafety.cpp  SemaCast.cpp  SemaChecking.cpp  SemaCodeComplete.cpp  SemaDecl.cpp  SemaDeclAttr.cpp  SemaDeclObjC.cpp  SemaExpr.cpp  SemaExprCXX.cpp  SemaExprMember.cpp  SemaExprObjC.cpp  SemaFeatureAvailability.cpp  SemaInit.cpp  SemaModule.cpp  SemaObjC.cpp  SemaStmt.cpp  SemaStmtAsm.cpp  SemaTemplateDeduction.cpp  SemaTemplateInstantiate.cpp  SemaTemplateInstantiateDecl.cpp  SemaType.cpp  TreeTransform.h
clang/lib/Serialization/: ASTReader.cpp  ASTReaderDecl.cpp  ASTReaderStmt.cpp  ASTWriter.cpp  ASTWriterDecl.cpp  ASTWriterStmt.cpp  ModuleManager.cpp
clang/lib/Tooling/: DependencyScanningTool.cpp
clang/test/: CMakeLists.txt  lit.cfg.py
clang/test/APINotes/: boundssafety-errors.c
clang/test/Analysis/: FixedAddressDereferenceCheckerMigration.cpp
clang/test/CAS/: fdepscan-driver.c  libclang-replay-job.c
clang/test/ClangScanDeps/: gmodules.c
clang/test/CodeGen/: allow-ubsan-check.c  attr-counted-by.c
clang/test/CodeGenCXX/: feature-availability.cpp  noescape.cpp  ptrauth-apple-kext-indirect-call-2.cpp  ptrauth-apple-kext-indirect-call.cpp  ptrauth-apple-kext-indirect-virtual-dtor-call.cpp  ptrauth-explicit-vtable-pointer-control.cpp  ptrauth-global-constant-initializers.cpp  ptrauth-member-function-pointer.cpp  ptrauth-type-info-vtable.cpp  ptrauth-virtual-function-wrapper-globals.cpp  ptrauth-virtual-function.cpp  ptrauth-vtable-virtual-inheritance-thunk-wrapper-globals.cpp  ptrauth-vtable-virtual-inheritance-thunk.cpp
clang/test/CodeGenObjC/: noescape.m  objc2-constant-literals-ptrauth.m
clang/test/Driver/: lld-repro.c
clang/test/Misc/: pragma-attribute-supported-attributes-list.test
clang/test/Modules/: tmo-clang-modules-serialization.cpp  tmo-cxx-module-serialization.cppm
clang/test/PCH/: tmo-with-pch.cpp
clang/test/Sema/: attr-counted-by-late-parsed-struct-ptrs.c  attr-counted-by-late-parsed-type-positions.c  attr-counted-by-or-null-late-parsed-struct-ptrs.c  attr-counted-by-struct-ptrs.c  attr-counted-by-void-ptr-gnu.c  attr-sized-by-late-parsed-struct-ptrs.c  attr-sized-by-or-null-late-parsed-struct-ptrs.c  feature-availability.c  format-strings.c  statements.c
clang/test/SemaCXX/: feature-availability.cpp
clang/test/SemaObjC/: feature-availability.m
clang/tools/: CMakeLists.txt
clang/tools/clang-scan-deps/: ClangScanDeps.cpp
clang/tools/driver/: cc1depscan_main.cpp  driver.cpp
clang/tools/libclang/: CDependencies.cpp  CIndex.cpp  CIndexDiagnostic.cpp  CIndexDiagnostic.h  CXCursor.cpp  libclang.map
clang/unittests/: CMakeLists.txt
clang/unittests/Basic/: CMakeLists.txt  FileManagerTest.cpp
clang/unittests/CAS/: IncludeTreeTest.cpp
clang/unittests/DependencyScanning/: DependencyScanningFilesystemTest.cpp
clang/unittests/Tooling/: DependencyScannerTest.cpp
clang/unittests/libclang/: LibclangTest.cpp
clang/utils/TableGen/: ClangAttrEmitter.cpp
compiler-rt/lib/profile/: InstrProfilingFile.c
compiler-rt/lib/sanitizer_common/: sanitizer_common.h  (+1 more)
compiler-rt/test/: CMakeLists.txt  lit.common.cfg.py
compiler-rt/test/bounds_safety/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
compiler-rt/test/bounds_safety/bidi_indexable/: lower_upper_check.c
compiler-rt/test/bounds_safety/scripts/: expect_no_trap.py  expect_trap.py  lldb_utils.py
compiler-rt/test/bounds_safety/utils/: soft_trap_runtime_impl.h
lld/MachO/: InputFiles.cpp
lldb/: CMakeLists.txt
lldb/test/: CMakeLists.txt
llvm/: CMakeLists.txt
llvm/cmake/: config-ix.cmake
llvm/docs/: LangRef.rst
llvm/runtimes/: CMakeLists.txt
llvm/test/: CMakeLists.txt  lit.cfg.py
llvm/tools/: CMakeLists.txt
(+927 files in other folders)
